crates/parser/src/tests/snapshots/kcl_parser__tests__types__type_str_1.snap
---
source: crates/parser/src/tests/types.rs
expression: "$crate :: tests :: parsing_type_node_string(r####\"  int    \"####)"
---
int
