crates/parser/src/tests/snapshots/kcl_parser__tests__types__type_str_2.snap
---
source: crates/parser/src/tests/types.rs
expression: "$crate :: tests ::\nparsing_type_node_string(r####\"bool | True |  int  | str|str\"####)"
---
bool | True | int | str | str
